tests/function/body_must_be_block.lox
// error
fun f() 123;
